Play around with switch expressions and JUnit 5